Add auction logic and fix bcrypt

--- a/ch12/views/auction.html
+++ b/ch12/views/auction.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %}
+<script src="../controllers/index.js"></script>{% extends 'layout.html' %}
 
 {% block good %}
 <h2>{{good.name}}</h2>
